# LimitRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
core/header/: GameSystem.h
core/header/GameSystem/: Camera.h  File.h  Gui.h  Log.h  Mesh.h  Model.h  Normal.h  NormalFunction.h  Objects.h  Shader.h  Texture.h  Vertex.h  Window.h
project/EditorLayout/: GuiLayout.ini
project/header/: Project_Config.h
project/icon/: icon.rc
project/model/telescope/: scene.gltf
project/shader/mix/: fragment.glsl  vertex.glsl
project/shader/normal/: fragment.glsl  vertex.glsl
project/shader/rectangleShader/: fragmentShader.glsl  vertexShader.glsl
project/src/: Application.cpp  LimitEditor.cpp
