cmake_minimum_required(VERSION 3.23)
project(LimitRenderer)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build)
option(GLFW_BUILD_DOCS OFF)
option(GLFW_BUILD_EXAMPLES OFF)
option(GLFW_BUILD_TESTS OFF)
add_subdirectory(core/libraries/glfw)
INCLUDE_DIRECTORIES(project/header core/header core/libraries/glad/include core/libraries/glm core/libraries/stb core/libraries/imgui core/libraries/glfw/include core/libraries/imgui-filebrowser)
add_executable(LimitEditor project/src/LimitEditor.cpp core/libraries/glad/src/glad.c core/libraries/imgui/imgui.cpp core/libraries/imgui/imgui_demo.cpp core/libraries/imgui/imgui_draw.cpp core/libraries/imgui/backends/imgui_impl_glfw.cpp core/libraries/imgui/backends/imgui_impl_opengl3.cpp core/libraries/imgui/imgui_tables.cpp core/libraries/imgui/imgui_widgets.cpp project/icon/icon.rc)
target_link_libraries(LimitEditor glfw)